k8s/api_gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice # name of the ingress
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /api/product # prefix path
        pathType: Prefix
        backend:
          service:
            name: home-service # point to the service
            port:
              number: 3001 # port of the service  
  - http:
      paths:
      - path: /api/user # prefix path
        pathType: Prefix
        backend:
          service:
            name: user-service # point to the service
            port:
              number: 8000 # port of the service 
  - http:
      paths:
      - path: /api/payment # prefix path
        pathType: Prefix
        backend:
          service:
            name: payment-service # point to the service
            port:
              number: 3002 # port of the service
  - http:
      paths:
      - path: /api/covenant # prefix path
        pathType: Prefix
        backend:
          service:
            name: contract-service # point to the service
            port:
              number: 9999 # port of the service
